# game

./: CMakeLists.txt  README.md  gen-glad.sh
res/: shader_plain.frag  shader_plain.vert  shader_tex.frag  shader_tex.vert
src/: CMakeLists.txt  linalg.h  main.c
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
